# python-project-83

./: .gitignore  Makefile  README.md  database.sql  pyproject.toml  setup.sfg
.github/workflows/: pyci.yml
page_analyzer/: app.py  db.py
page_analyzer/templates/: base.html  index.html  site.html  urls.html
