[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["ussury <meshalkins@ya.ru>"]
readme = "README.md"
packages = [{include = "page-analyzer"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.3.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
